Update greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
     <div id="quotationScreen" class="quotation-container">
         <!-- Header -->
         <div class="header">
-            <img src="images/logo.png" alt="Kannan Blue Metals" class="logo">
+            <img src="images/logo.jpg" alt="Kannan Blue Metals" class="logo">
             <div class="company-info">
                 <div class="company-name">KANNAN BLUE METALS</div>
                 <div class="address">
@@ -663,3 +663,4 @@
     </script>
 </body>
 </html>
+
