--- a/index.html
+++ b/index.html
@@ -11,51 +11,44 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body {
     font-family: Arial, sans-serif;
-    background: white;
+    background: #fff;
     min-height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
 /* LOGIN */
 .login-container {
-    background: white;
-    padding: 40px;
-    border-radius: 12px;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-    width: 100%;
-    max-width: 400px;
+    width: 360px;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
     text-align: center;
 }
-.login-container h2 { margin-bottom: 20px; color: #1a3c34; }
+.login-container h2 { margin-bottom: 20px; }
 .login-container input {
     width: 100%;
-    padding: 14px;
+    padding: 12px;
     margin: 10px 0;
-    border: 2px solid #ddd;
-    border-radius: 8px;
 }
 .login-container button {
     width: 100%;
-    padding: 14px;
+    padding: 12px;
     background: #1a3c34;
-    color: white;
+    color: #fff;
     border: none;
-    border-radius: 8px;
     cursor: pointer;
 }
-.error { color: red; margin-top: 10px; display: none; }
+.error { color: red; display: none; }
 
 /* QUOTATION */
 .quotation-container {
     display: none;
-    width: 100%;
     max-width: 900px;
     padding: 30px;
 }
 
-/* HEADER FIXED */
 .header {
     display: flex;
     align-items: center;
@@ -64,138 +57,30 @@ body {
 .logo-container {
     width: 120px;
     height: 120px;
-    flex-shrink: 0;
 }
-.logo {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-.company-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+.logo { width: 100%; height: 100%; object-fit: contain; }
 .company-name {
     font-size: 32px;
     font-weight: bold;
-    font-family: serif;
     color: #1a3c34;
 }
-.address {
-    font-size: 14px;
-    margin-top: 4px;
-}
+.address { margin-top: 5px; }
+
 .header-line {
     height: 2px;
     background: #1a3c34;
     margin: 15px 0;
 }
 
-.date-section {
-    text-align: right;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
+.date-section { text-align: right; margin-bottom: 20px; }
 
-.customer-section {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-.customer-section input {
-    width: 100%;
-    padding: 10px;
-    border: 2px solid #eee;
-    border-radius: 6px;
-}
-
-.add-material-btn {
-    background: #4CAF50;
-    color: white;
-    border: none;
-    padding: 12px 22px;
-    border-radius: 6px;
-    cursor: pointer;
-    margin-bottom: 15px;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-th, td {
-    padding: 12px;
-    border-bottom: 1px solid #ddd;
-}
-th { background: #f7f7f7; }
-
-input[type="number"] {
-    width: 100%;
-    padding: 6px;
-}
-
+table { width: 100%; border-collapse: collapse; }
+th, td { padding: 10px; border-bottom: 1px solid #ccc; }
 .amount { font-weight: bold; }
 
-.delete-btn {
-    background: red;
-    color: white;
-    border: none;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    cursor: pointer;
-}
+button { cursor: pointer; }
 
-.note {
-    text-align: right;
-    font-style: italic;
-    font-size: 13px;
-}
-
-.footer {
-    text-align: center;
-    margin-top: 30px;
-}
-
-.actions {
-    display: flex;
-    gap: 15px;
-    justify-content: center;
-    margin-top: 25px;
-}
-.actions button {
-    padding: 14px 20px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    color: white;
-    background: #1a3c34;
-}
-
-.print-btn { background: #28a745; }
-
-/* MODAL */
-.modal {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.5);
-}
-.modal-content {
-    background: white;
-    padding: 25px;
-    border-radius: 10px;
-    max-width: 350px;
-    margin: 20% auto;
-}
-
-/* PRINT */
-@media print {
-    body * { visibility: hidden; }
-    .quotation-container, .quotation-container * { visibility: visible; }
-    .actions, .add-material-btn, .delete-btn { display: none !important; }
-}
+.actions { margin-top: 20px; display: flex; gap: 10px; justify-content: center; }
 </style>
 </head>
 
@@ -217,7 +102,7 @@ input[type="number"] {
         <div class="logo-container">
             <img src="images/logo.jpg" class="logo">
         </div>
-        <div class="company-info">
+        <div>
             <div class="company-name">KANNAN BLUE METALS</div>
             <div class="address">
                 165/1, East Pudupalayam, M.Tholuvu, Chennimalai, Erode-638051
@@ -228,41 +113,49 @@ input[type="number"] {
     <div class="header-line"></div>
 
     <div class="date-section">
-        Date: <span id="currentDate"></span>
+        Date: <span id="date"></span>
     </div>
-
-    <div class="customer-section">
-        <input id="partyName" placeholder="Party Name">
-        <input id="partyPlace" placeholder="Place">
-    </div>
-
-    <button class="add-material-btn" onclick="openModal()">+ Add Material</button>
 
     <table>
         <thead>
             <tr>
-                <th>Material</th>
-                <th>Unit</th>
-                <th>Cost</th>
-                <th>Amount</th>
-                <th>Action</th>
+                <th>Material</th><th>Unit</th><th>Cost</th><th>Amount</th>
             </tr>
         </thead>
-        <tbody id="tableBody"></tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3" style="text-align:right"><b>GRAND TOTAL</b></td>
-                <td id="grandTotal">₹0</td>
-                <td></td>
-            </tr>
-        </tfoot>
+        <tbody id="rows"></tbody>
     </table>
 
-    <div class="note">(including transport charges)</div>
-
-    <div class="footer">
-        📞 82206 24590 | 63698 30590 | 9842830590
-    </div>
-
     <div class="actions">
-        <button class="print-btn" onc
+        <button onclick="window.print()">Print</button>
+        <button onclick="downloadPDF()">PDF</button>
+    </div>
+</div>
+
+<script>
+const ADMIN_USER = "admin";
+const ADMIN_PASS = "Kannan";
+
+function login() {
+    const u = document.getElementById("username").value;
+    const p = document.getElementById("password").value;
+
+    if (u === ADMIN_USER && p === ADMIN_PASS) {
+        document.getElementById("loginScreen").style.display = "none";
+        document.getElementById("quotationScreen").style.display = "block";
+        document.getElementById("date").innerText =
+            new Date().toLocaleDateString("en-GB");
+    } else {
+        document.getElementById("errorMsg").style.display = "block";
+    }
+}
+
+function downloadPDF() {
+    const { jsPDF } = window.jspdf;
+    const pdf = new jsPDF();
+    pdf.text("Kannan Blue Metals Quotation", 20, 20);
+    pdf.save("quotation.pdf");
+}
+</script>
+
+</body>
+</html>
