--- a/index.html
+++ b/index.html
@@ -22,4 +22,315 @@ body{
 #loginScreen{
     width:360px;
     padding:30px;
-    box-shadow:
+    box-shadow:0 10px 25px rgba(0,0,0,.15);
+    border-radius:10px;
+    text-align:center;
+}
+#loginScreen h2{margin-bottom:20px}
+#loginScreen input{
+    width:100%;
+    padding:12px;
+    margin:10px 0;
+}
+#loginScreen button{
+    width:100%;
+    padding:12px;
+    background:#1a3c34;
+    color:#fff;
+    border:none;
+    cursor:pointer;
+}
+#errorMsg{color:red;display:none}
+
+/* QUOTATION */
+#quotationScreen{
+    display:none;
+    width:100%;
+    max-width:900px;
+    padding:30px;
+}
+
+/* HEADER */
+.header{
+    display:flex;
+    align-items:center;
+    gap:20px;
+}
+.logo-box{
+    width:120px;
+    height:120px;
+    flex-shrink:0;
+}
+.logo-box img{
+    width:100%;
+    height:100%;
+    object-fit:contain;
+}
+.company-name{
+    font-size:32px;
+    font-weight:bold;
+    color:#1a3c34;
+}
+.address{
+    margin-top:4px;
+    font-size:14px;
+}
+.line{
+    height:2px;
+    background:#1a3c34;
+    margin:15px 0;
+}
+
+.date{
+    text-align:right;
+    font-weight:bold;
+    margin-bottom:20px;
+}
+
+.customer{
+    display:flex;
+    gap:20px;
+    margin-bottom:20px;
+}
+.customer input{
+    width:100%;
+    padding:10px;
+}
+
+.add-btn{
+    background:#4CAF50;
+    color:#fff;
+    padding:10px 20px;
+    border:none;
+    cursor:pointer;
+    margin-bottom:15px;
+}
+
+table{
+    width:100%;
+    border-collapse:collapse;
+}
+th,td{
+    padding:10px;
+    border-bottom:1px solid #ccc;
+}
+.amount{font-weight:bold}
+.delete{
+    background:red;
+    color:#fff;
+    border:none;
+    width:30px;
+    height:30px;
+    border-radius:50%;
+    cursor:pointer;
+}
+
+.note{
+    text-align:right;
+    font-style:italic;
+    font-size:13px;
+    margin-top:5px;
+}
+
+.footer{
+    text-align:center;
+    margin-top:30px;
+}
+
+.actions{
+    margin-top:25px;
+    display:flex;
+    gap:15px;
+    justify-content:center;
+}
+.actions button{
+    padding:12px 20px;
+    border:none;
+    cursor:pointer;
+    color:#fff;
+    background:#1a3c34;
+}
+.print{background:#28a745}
+
+/* MODAL */
+#modal{
+    display:none;
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,.5);
+}
+#modalContent{
+    background:#fff;
+    width:300px;
+    margin:20% auto;
+    padding:20px;
+}
+#modal select{width:100%;padding:10px}
+
+/* PRINT */
+@media print{
+    body *{visibility:hidden}
+    #quotationScreen,#quotationScreen *{visibility:visible}
+    .actions,.add-btn,.delete{display:none}
+}
+</style>
+</head>
+
+<body>
+
+<!-- LOGIN -->
+<div id="loginScreen">
+    <h2>Admin Login</h2>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
+    <button onclick="login()">Login</button>
+    <div id="errorMsg">Invalid credentials</div>
+</div>
+
+<!-- QUOTATION -->
+<div id="quotationScreen">
+
+    <div class="header">
+        <div class="logo-box">
+            <img src="images/logo.jpg">
+        </div>
+        <div>
+            <div class="company-name">KANNAN BLUE METALS</div>
+            <div class="address">
+                165/1, East Pudupalayam, M.Tholuvu, Chennimalai, Erode-638051
+            </div>
+        </div>
+    </div>
+
+    <div class="line"></div>
+
+    <div class="date">
+        Date: <span id="date"></span>
+    </div>
+
+    <div class="customer">
+        <input id="party" placeholder="Party Name">
+        <input id="place" placeholder="Place">
+    </div>
+
+    <button class="add-btn" onclick="openModal()">+ Add Material</button>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Material</th><th>Unit</th><th>Cost</th><th>Amount</th><th>Action</th>
+            </tr>
+        </thead>
+        <tbody id="tbody"></tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3" style="text-align:right"><b>GRAND TOTAL</b></td>
+                <td id="total">₹0</td>
+                <td></td>
+            </tr>
+        </tfoot>
+    </table>
+
+    <div class="note">(including transport charges)</div>
+
+    <div class="footer">
+        📞 82206 24590 | 63698 30590 | 9842830590
+    </div>
+
+    <div class="actions">
+        <button class="print" onclick="window.print()">Print</button>
+        <button onclick="downloadPDF()">Download PDF</button>
+        <button onclick="shareWA()">Share WhatsApp</button>
+    </div>
+</div>
+
+<!-- MODAL -->
+<div id="modal">
+    <div id="modalContent">
+        <select id="material">
+            <option value="">Select</option>
+            <option>M-Sand</option><option>P-Sand</option><option>6 mm</option>
+            <option>12 mm</option><option>20 mm</option><option>40 mm</option>
+            <option>53 mm</option><option>Soling stone</option>
+            <option>Wetmix</option><option>GSB</option>
+            <option>6" solid blocks</option><option>8" solid blocks</option>
+            <option>Dust</option>
+        </select>
+        <br><br>
+        <button onclick="addRow()">Add</button>
+    </div>
+</div>
+
+<script>
+const ADMIN_USER="admin";
+const ADMIN_PASS="Kannan";
+let id=0;
+
+function login(){
+    if(username.value===ADMIN_USER && password.value===ADMIN_PASS){
+        document.getElementById("loginScreen").style.display="none";
+        document.getElementById("quotationScreen").style.display="block";
+        date.innerText=new Date().toLocaleDateString("en-GB");
+    }else{
+        errorMsg.style.display="block";
+    }
+}
+
+function openModal(){ modal.style.display="block"; }
+
+function addRow(){
+    if(!material.value) return;
+    tbody.innerHTML+=`
+    <tr id="r${id}">
+        <td>${material.value}</td>
+        <td><input type="number" oninput="calc(${id})"></td>
+        <td><input type="number" oninput="calc(${id})"></td>
+        <td class="amount" id="a${id}">₹0</td>
+        <td><button class="delete" onclick="del(${id})">×</button></td>
+    </tr>`;
+    id++;
+    modal.style.display="none";
+    material.value="";
+}
+
+function calc(i){
+    const r=document.getElementById(`r${i}`);
+    const u=r.cells[1].children[0].value||0;
+    const c=r.cells[2].children[0].value||0;
+    const a=u*c;
+    document.getElementById(`a${i}`).innerText="₹"+a;
+    totalCalc();
+}
+function del(i){ document.getElementById(`r${i}`).remove(); totalCalc(); }
+
+function totalCalc(){
+    let t=0;
+    document.querySelectorAll(".amount").forEach(e=>{
+        t+=+e.innerText.replace("₹","")||0;
+    });
+    total.innerText="₹"+t;
+}
+
+function downloadPDF(){
+    const {jsPDF}=window.jspdf;
+    const pdf=new jsPDF();
+    const img=new Image();
+    img.src="images/logo.jpg";
+    pdf.addImage(img,"JPEG",15,15,30,30);
+    pdf.setFontSize(22);
+    pdf.text("KANNAN BLUE METALS",50,25);
+    pdf.setFontSize(11);
+    pdf.text("165/1, East Pudupalayam, M.Tholuvu, Chennimalai, Erode-638051",50,33);
+    pdf.line(15,45,195,45);
+    pdf.save("Kannan-Quotation.pdf");
+}
+
+function shareWA(){
+    window.open(`https://wa.me/?text=${encodeURIComponent(
+        "Kannan Blue Metals Quotation\nTotal: "+total.innerText
+    )}`);
+}
+</script>
+
+</body>
+</html>
